# asian-fx-option

./: .gitignore  LICENSE  README.md  TRYME.ipynb  pyproject.toml
src/asian_fx_option/: __init__.py  api.py  cash_settlement.py  core.py  exceptions.py  physical_settlement.py
tests/: test_api.py  test_cash_settlement.py  test_core.py  test_physical_settlement.py
