[project]
name = "asian-fx-option"
version = "0.1.0"
description = "Asian FX Option pricing library with flexible features"
readme = "README.md"
authors = [
    { name = "Kervin Low", email = "quanthead@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "nbconvert>=7.17.1",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
